--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 </div>
                 <nav class="header__navigation">
                     <ul>
-                        <li><a href="#about">Преимущества</a></li>
-                        <li><a href="#delivery">Наша работа</a></li>
-                        <li><a href="#price">Цены</a></li>
-                        <li><a href="#scheme">Схема работы </a></li>
-                        <li><a href="#reviews"> Отзывы </a></li>
-                        <li><a href="#contacts">Контакты</a></li>
+                        <li><a class="header__link" href="#about">Преимущества</a></li>
+                        <li><a class="header__link" href="#delivery">Наша работа</a></li>
+                        <li><a class="header__link" href="#price">Цены</a></li>
+                        <li><a class="header__link" href="#scheme">Схема работы </a></li>
+                        <li><a class="header__link" href="#reviews"> Отзывы </a></li>
+                        <li><a class="header__link" href="#contacts">Контакты</a></li>
                     </ul>
                 </nav>
                 <div class="header__phone">
